[tool.poetry]
name = "rpi-apa102-led-server"
version = "0.1.0"
description = ""
authors = ["Amjad Saadeh <amjad@saadeh.dev>"]
readme = "README.md"
packages = [{include = "rpi_apa102_led_server"}]

[tool.poetry.dependencies]
python = "^3.11"
apa102-pi = "^2.5.1"
flask = "^2.3.3"
flask-restful = "^0.3.10"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
